--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                         <a href="./web/w3schools/index.html">
                             <div class="menu__item__drop__item">W3School</div>
                         </a>
-                        <a href="./menu/menu_2.html">
-                            <div class="menu__item__drop__item">Mozilla</div>
+                        <a href="./web/w3schools_2/w3schools_2.html">
+                            <div class="menu__item__drop__item">W3School_2</div>
                         </a>
                     </div>
                 </div>
