--- a/web/w3schools_2/w3schools_2.html
+++ b/web/w3schools_2/w3schools_2.html
@@ -2237,6 +2237,20 @@
                 <div class="content__example">
                     <h3>Example</h3>
                     <div class="content__example__code">
+                        <pre>
+                            <code>&lt!DOCTYPE html&gt</code>
+                            <code>&lthtml&gt</code>
+                            <code>&lthead&gt</code>
+                            <code>&lttitle&gt</code>Page Title<code>&lt/title&gt</code>
+                            <code>&lt/head&gt</code>
+                            <code>&ltbody&gt</code>
+
+                            <code>&lth1&gt</code>This is a Heading<code>&lt/h1&gt</code>
+                            <code>&ltp&gt</code>This is a paragraph.<code>&lt/p&gt</code>
+
+                            <code>&lt/body&gt</code>
+                            <code>&lt/html&gt</code>
+                        </pre>
 
                     </div>
                     <button class="button green">
