--- a/web/w3schools_2/w3schools_2.html
+++ b/web/w3schools_2/w3schools_2.html
@@ -2238,18 +2238,18 @@
                     <h3>Example</h3>
                     <div class="content__example__code">
                         <pre>
-                            <code>&lt!DOCTYPE html&gt</code>
-                            <code>&lthtml&gt</code>
-                            <code>&lthead&gt</code>
-                            <code>&lttitle&gt</code>Page Title<code>&lt/title&gt</code>
-                            <code>&lt/head&gt</code>
-                            <code>&ltbody&gt</code>
+                            <code>&lt<span>!DOCTYPE <span class="red">html</span></span>&gt</code>
+                            <code>&lt<span>html</span>&gt</code>
+                            <code>&lt<span>head</span>&gt</code>
+                            <code>&lt<span>title</span>&gt<span class="p">Page Title</span>&lt/<span>title</span>&gt</code>
+                            <code>&lt/<span>head</span>&gt</code>
+                            <code>&lt<span>body</span>&gt</code>
 
-                            <code>&lth1&gt</code>This is a Heading<code>&lt/h1&gt</code>
-                            <code>&ltp&gt</code>This is a paragraph.<code>&lt/p&gt</code>
+                            <code>&lt<span>h1</span>&gt<span class="p">This is a Heading</span>&lt<span>/h1</span>&gt</code>
+                            <code>&lt<span>p</span>&gt<span  class="p">This is a paragraph.</span>&lt<span>/p</span>&gt</code>
 
-                            <code>&lt/body&gt</code>
-                            <code>&lt/html&gt</code>
+                            <code>&lt<span>/body</span>&gt</code>
+                            <code>&lt<span>/html</span>&gt</code>
                         </pre>
 
                     </div>
