--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                         <a href="./web/w3schools_2/w3schools_2.html">
                             <div class="menu__item__drop__item">W3School_2</div>
                         </a>
+                        <a href="./web/bootstraps/bootstraps.html">
+                            <div class="menu__item__drop__item">Bootstrap</div>
+                        </a>
                     </div>
                 </div>
                 <div class="menu__item"><a href="#">Menu</a>
