--- a/web/studio_design_lading_page/studio_design_lading_page.html
+++ b/web/studio_design_lading_page/studio_design_lading_page.html
@@ -48,6 +48,96 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="flex px-120 py-120">
+                <div class="flex flex-col justify-center" style="width: 336px;">
+                    <h1 class="mb-40">Our Client</h1>
+                    <p class="mb-40">Several selected clients, who already believe in our service.</p>
+                </div>
+                <div class="flex justify-center ml-60" style="width: calc(100% - 336px);">
+                    <nav class="flex align-center justify-center">
+                        <ul class="flex align-center justify-between">
+                            <li class="flex align-center justify-between mr-60 h-60 hover"><img
+                                    src="./img/Google Logo.png" alt="google"></li>
+                            <li class="flex align-center justify-between mr-60 h-60 hover"><img
+                                    src="./img/Airbnb Logo.png" alt="airbnb"></li>
+                            <li class="flex align-center justify-between mr-60 h-60 hover"><img
+                                    src="./img/Uber Eats Logo.png" alt="uber"></li>
+                            <li class="flex align-center justify-between mr-60 h-60 hover"><img
+                                    src="./img/Amazon Logo.png" alt="amazon"></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="relative flex px-120">
+                <div class="flex flex-col justify-center" style="width: 396px;">
+                    <h1 class="mb-40">How can we help your Business ?</h1>
+                    <p class="mb-40">We build readymade websites, mobile applications, and elaborate online business
+                        services.</p>
+                    <div class="relative z-10">
+                        <div class="absolute bg__dot z-1"></div>
+                        <div class="absolute bg__dot z-1" style="left:53%"></div>
+                    </div>
+                </div>
+                <div class="flex justify-end" style="margin-left: 91px; width: calc(100% - 396px);">
+                    <div class="flex flex-col mr-32" style="margin-top: 68px;">
+                        <div class="flex flex-col justify-center align-center text-center flex-wrap bs-50 br-40 mb-32 bg-white"
+                            style="width: 308px;">
+                            <span class="flex justify-center align-center w-120 h-120 bg-primary br-20 mb-32 mt-40">
+                                <img src="./img/box-search 1.png" alt="box search" style="width: 74px; height: 74px;">
+                            </span>
+                            <span class="mb-32 px-72">
+                                <h3>Business Idea Planning</h3>
+                            </span>
+                            <span class="mb-64 px-32">
+                                <p>We present you a proposal and discuss niffty-gritty like</p>
+                            </span>
+                        </div>
+                        <div class="flex flex-col justify-center align-center text-center flex-wrap bs-50 br-40 mb-32 bg-white"
+                            style="width: 308px;">
+                            <span class="flex justify-center align-center w-120 h-120 bg-primary br-20 mb-32 mt-40">
+                                <img src="./img/box-search 1.png" alt="box search" style="width: 74px; height: 74px;">
+                            </span>
+                            <span class="mb-32 px-72">
+                                <h3>Business Idea Planning</h3>
+                            </span>
+                            <span class="mb-64 px-32">
+                                <p>We present you a proposal and discuss niffty-gritty like</p>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="flex flex-col">
+                        <div class="flex flex-col justify-center align-center text-center flex-wrap bs-50 br-40 mb-32 bg-white"
+                            style="width: 308px;">
+                            <span class="flex justify-center align-center w-120 h-120 bg-primary br-20 mb-32 mt-40">
+                                <img src="./img/box-search 1.png" alt="box search" style="width: 74px; height: 74px;">
+                            </span>
+                            <span class="mb-32 px-72">
+                                <h3>Business Idea Planning</h3>
+                            </span>
+                            <span class="mb-64 px-32">
+                                <p>We present you a proposal and discuss niffty-gritty like</p>
+                            </span>
+                        </div>
+                        <div class="flex flex-col justify-center align-center text-center flex-wrap bs-50 br-40 mb-32 bg-white"
+                            style="width: 308px;">
+                            <span class="flex justify-center align-center w-120 h-120 bg-primary br-20 mb-32 mt-40">
+                                <img src="./img/box-search 1.png" alt="box search" style="width: 74px; height: 74px;">
+                            </span>
+                            <span class="mb-32 px-72">
+                                <h3>Business Idea Planning</h3>
+                            </span>
+                            <span class="mb-64 px-32">
+                                <p>We present you a proposal and discuss niffty-gritty like</p>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg__2 absolute bg-primary z--1"></div>
+            </div>
+        </section>
     </main>
 </body>
 
