--- a/web/bootstraps/bootstraps.html
+++ b/web/bootstraps/bootstraps.html
@@ -46,7 +46,7 @@
                                 <i class="fa-solid fa-caret-down"></i>
                             </div>
                             <div
-                                class="absolute px-4 py-4 text-black r-0 t100 border-04 border-black ws-nowrap br-8 bg-white bs-5 d-none">
+                                class="absolute px-4 py-4 text-black r-0 t100 border-04 border-black ws-nowrap br-8 bg-white bs-5">
                                 <p class="px-16 py-4 my-2 br-4">v5 releases</p>
                                 <p class="px-16 py-4 my-2 br-4 bg-primary text-white flex justify-between align-center">
                                     Latest (5.3.x)
