--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                         <a href="./web/bootstraps/bootstraps.html">
                             <div class="menu__item__drop__item">Bootstrap</div>
                         </a>
+                        <a href="./web/studio_design_lading_page/studio_design_lading_page.html">
+                            <div class="menu__item__drop__item">Studio_design_lading_page</div>
+                        </a>
                     </div>
                 </div>
                 <div class="menu__item"><a href="#">Menu</a>
