--- a/web/studio_design_lading_page/studio_design_lading_page.html
+++ b/web/studio_design_lading_page/studio_design_lading_page.html
@@ -71,8 +71,8 @@
             </div>
         </section>
         <section>
-            <div class="relative flex px-120">
-                <div class="flex flex-col justify-center" style="width: 396px;">
+            <div class="relative flex px-120 z-10">
+                <div class="relative flex flex-col justify-center" style="width: 396px;">
                     <h1 class="mb-40">How can we help your Business ?</h1>
                     <p class="mb-40">We build readymade websites, mobile applications, and elaborate online business
                         services.</p>
@@ -81,7 +81,7 @@
                         <div class="absolute bg__dot z-1" style="left:53%"></div>
                     </div>
                 </div>
-                <div class="flex justify-end" style="margin-left: 91px; width: calc(100% - 396px);">
+                <div class="flex justify-end px-64  " style="margin-left: 91px; width: calc(100% - 396px);">
                     <div class="flex flex-col mr-32" style="margin-top: 68px;">
                         <div class="flex flex-col justify-center align-center text-center flex-wrap bs-50 br-40 mb-32 bg-white"
                             style="width: 308px;">
@@ -136,6 +136,133 @@
                     </div>
                 </div>
                 <div class="bg__2 absolute bg-primary z--1"></div>
+            </div>
+        </section>
+        <section>
+            <div class="relative flex px-120 py-120  z-10">
+                <div class="relative flex justify-center align-center">
+                    <div style="width: 550px; height: 372px;">
+                        <img class="br-16" src="./img/video.jpg" alt="video">
+                    </div>
+                    <div class="absolute" style="width: 78px; height: 78px;">
+                        <img src="./img/play-rounded-button 1.png" alt="">
+                    </div>
+                    <div class="bg__circle absolute bg-yellow"></div>
+                </div>
+                <div class="relative flex flex-col justify-center ml-80">
+                    <h1 class="mb-40 mr-64">Great Digital Product Agency since 2016</h1>
+                    <p class="mb-40">Our Business Plan is a written document describing a company's core business
+                        activites, Objectives, and how it plans to
+                        achieve its goals. Our goal is to provide our client high quality Product with modern idea
+                        accordingly their budgets and
+                        according thir reuirements.</p>
+                    <div class="bg__shape absolute bg-primary"></div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="flex justify-center px-120 py-120 z-10">
+                <div class="flex flex-col justify-center ml-80">
+                    <h1 class="mb-40 mr-64">What our happy client say</h1>
+                    <p class="mb-40">Several selected clients, who already believe in our service.</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="flex justify-center px-120 z-10">
+                <div class="relative" style="width: 389px; height: 389px; ">
+                    <img class="matthew__paul" src="./img/nguoito.jpg" alt="">
+                    <div class="absolute bg__dot z-100" style="left: 180px; top:-40px"></div>
+                </div>
+                <div class="flex flex-col justify-center ml-80" style="width: 412px;">
+                    <h1 class="mb-40 mr-64">Matthew Paul</h1>
+                    <p class="mb-40">Perfect, very good job! Thank you for the amazing design and work. Really impressed
+                        with the high quality and quick
+                        turnaround time. Highly recommend.</p>
+                    <div class="flex align-center">
+                        <div class="dot__slide bg-blue"></div>
+                        <div class="dot__slide bg-primary ml-28"></div>
+                        <div class="dot__slide bg-primary ml-28"></div>
+                        <div class="dot__slide bg-primary ml-28"></div>
+                        <div class="dot__slide bg-primary ml-28"></div>
+                    </div>
+                </div>
+                <div class="relative ml-80" style="width: calc(100% - 389px - 412px);">
+                    <img class="img__large" src="./img/n1.png" alt="img" style="top: 120px; left: 120px;">
+                    <img class="img__medium" src="./img/n2.png" alt="img" style="top: 50px; left: 0;">
+                    <img class="img__medium" src="./img/n3.png" alt="img" style="top: 260px; left: 100px;">
+                    <img class="img__small" src="./img/n4.png" alt="img" style="top: 200px; left: 0;">
+                    <img class="img__small" src="./img/n5.png" alt="img" style="top: 210px; left: 250px;">
+                    <img class="img__small" src="./img/n6.png" alt="img" style="top: 0; left: 120px;">
+                    <img class="img__tiny" src="./img/n7.png" alt="img" style="top: 60px; left: 250px;">
+                    <img class="img__tiny" src="./img/n8.png" alt="img" style="top: 140px; left: 300px;">
+                    <div class="absolute bg-yellow br-circle z--1" style="width: 184px; height: 184px; top:100px"></div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="relative flex bg-primary mx-120 my-120" style="height: 292px; border-radius: 75px;">
+                <div class="flex flex-col justify-center ml-80" style="width: calc(100% - 543px);">
+                    <h1 class="mb-40 mr-64">Subscribe Newsletter</h1>
+                    <p class="mb-40">I will update good news and promotion service not spam</p>
+                </div>
+                <div class="relative flex align-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="497" height="292" viewBox="0 0 497 292" fill="none">
+                        <path
+                            d="M7.07175 158.172C-19.0148 80.4252 38.8318 0 120.839 0H422C463.421 0 497 33.5786 497 75V217C497 258.421 463.421 292 422 292H123.901C80.9308 292 42.7643 264.549 29.0954 223.81L7.07175 158.172Z"
+                            fill="#2639ED" />
+                    </svg>
+                    <div class="absolute bg-white br-circle flex-middle justify-between px-8 py-8"
+                        style="width: 479px; height: 80px;">
+                        <input class="px-20" type="text" placeholder="Enter your email address..">
+                        <div class="px-40 py-20 bg-blue br-circle text-white flex-middle">Contact Now</div>
+                    </div>
+                </div>
+                <div class="bg__shape absolute bg-yellow z-100"
+                    style="transform: rotate(90deg) translate(40px, 40px); bottom:0;left: 0; ">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="relative flex mx-120" style="height: 292px; border-radius: 75px;">
+                <div class="flex flex-col" style="width: 270px;">
+                    <div class="fs-28 hover">
+                        <span class="fw-600">A+</span>
+                        <span>Studio</span>
+                    </div>
+                    <div class="my-28 ">
+                        Leading digital agency with solid design and development expertise. We build readymade websites,
+                        mobile applications,
+                        and elaborate online business services.
+                    </div>
+                </div>
+                <div class="flex ws-nowrap " style="width: calc(100% - 270px); margin-left: 191px;">
+                    <div class="flex flex-col mr-100">
+                        <h3 class="mb-24 fw-600">What We Do</h3>
+                        <p class="mb-12 ">Web Design </p>
+                        <p class="mb-12 ">App Design</p>
+                        <p class="mb-12 ">Social Media Manage</p>
+                        <p>Market Analysis Project</p>
+                    </div>
+                    <div class="flex flex-col mr-100">
+                        <h3 class="mb-24 fw-600">Company</h3>
+                        <p class="mb-12">About Us</p>
+                        <p class="mb-12">Career</p>
+                        <p>Become Investor</p>
+                    </div>
+                    <div class="flex flex-col mr-100">
+                        <h3 class="mb-24 fw-600">Contact</h3>
+                        <p class="mb-12">WhatsApp</p>
+                        <p>Support 24</p>
+                    </div>
+                    <div class="flex flex-col ">
+                        <h3 class="mb-24 fw-600">Company</h3>
+                        <p class="mb-12">About Us</p>
+                        <p class="mb-12">Career</p>
+                        <p>Become Investor</p>
+                    </div>
+
+                </div>
             </div>
         </section>
     </main>
