--- a/web/studio_design_lading_page/studio_design_lading_page.html
+++ b/web/studio_design_lading_page/studio_design_lading_page.html
@@ -97,8 +97,8 @@
                         </div>
                         <div class="flex flex-col justify-center align-center text-center flex-wrap bs-50 br-40 mb-32 bg-white"
                             style="width: 308px;">
-                            <span class="flex justify-center align-center w-120 h-120 bg-primary br-20 mb-32 mt-40">
-                                <img src="./img/box-search 1.png" alt="box search" style="width: 74px; height: 74px;">
+                            <span class="flex justify-center align-center w-120 h-120 bg-pink br-20 mb-32 mt-40">
+                                <img src="./img/code-1 1.png" alt="box search" style="width: 74px; height: 74px;">
                             </span>
                             <span class="mb-32 px-72">
                                 <h3>Business Idea Planning</h3>
@@ -111,8 +111,8 @@
                     <div class="flex flex-col">
                         <div class="flex flex-col justify-center align-center text-center flex-wrap bs-50 br-40 mb-32 bg-white"
                             style="width: 308px;">
-                            <span class="flex justify-center align-center w-120 h-120 bg-primary br-20 mb-32 mt-40">
-                                <img src="./img/box-search 1.png" alt="box search" style="width: 74px; height: 74px;">
+                            <span class="flex justify-center align-center w-120 h-120 bg-yellow br-20 mb-32 mt-40">
+                                <img src="./img/empty-wallet 1.png" alt="box search" style="width: 74px; height: 74px;">
                             </span>
                             <span class="mb-32 px-72">
                                 <h3>Business Idea Planning</h3>
@@ -123,8 +123,8 @@
                         </div>
                         <div class="flex flex-col justify-center align-center text-center flex-wrap bs-50 br-40 mb-32 bg-white"
                             style="width: 308px;">
-                            <span class="flex justify-center align-center w-120 h-120 bg-primary br-20 mb-32 mt-40">
-                                <img src="./img/box-search 1.png" alt="box search" style="width: 74px; height: 74px;">
+                            <span class="flex justify-center align-center w-120 h-120 bg-green  br-20 mb-32 mt-40">
+                                <img src="./img/chart-square 1.png" alt="box search" style="width: 74px; height: 74px;">
                             </span>
                             <span class="mb-32 px-72">
                                 <h3>Business Idea Planning</h3>
@@ -212,8 +212,8 @@
                             d="M7.07175 158.172C-19.0148 80.4252 38.8318 0 120.839 0H422C463.421 0 497 33.5786 497 75V217C497 258.421 463.421 292 422 292H123.901C80.9308 292 42.7643 264.549 29.0954 223.81L7.07175 158.172Z"
                             fill="#2639ED" />
                     </svg>
-                    <div class="absolute bg-white br-circle flex-middle justify-between px-8 py-8"
-                        style="width: 479px; height: 80px;">
+                    <div class="absolute bg-white br-circle flex-middle justify-between px-8 py-8 bs-5 bs-50"
+                        style="width: 479px; height: 80px; transform: translateX(-70px);">
                         <input class="px-20" type="text" placeholder="Enter your email address..">
                         <div class="px-40 py-20 bg-blue br-circle text-white flex-middle">Contact Now</div>
                     </div>
@@ -237,20 +237,20 @@
                     </div>
                 </div>
                 <div class="flex ws-nowrap " style="width: calc(100% - 270px); margin-left: 191px;">
-                    <div class="flex flex-col mr-100">
+                    <div class="flex flex-col mr-100 ">
                         <h3 class="mb-24 fw-600">What We Do</h3>
                         <p class="mb-12 ">Web Design </p>
                         <p class="mb-12 ">App Design</p>
                         <p class="mb-12 ">Social Media Manage</p>
                         <p>Market Analysis Project</p>
                     </div>
-                    <div class="flex flex-col mr-100">
+                    <div class="flex flex-col mr-100 ">
                         <h3 class="mb-24 fw-600">Company</h3>
                         <p class="mb-12">About Us</p>
                         <p class="mb-12">Career</p>
                         <p>Become Investor</p>
                     </div>
-                    <div class="flex flex-col mr-100">
+                    <div class="flex flex-col mr-100 ">
                         <h3 class="mb-24 fw-600">Contact</h3>
                         <p class="mb-12">WhatsApp</p>
                         <p>Support 24</p>
