--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                             <div class="menu__item__drop__item">Bootstrap</div>
                         </a>
                         <a href="./web/studio_design_lading_page/studio_design_lading_page.html">
-                            <div class="menu__item__drop__item">Studio_design_lading_page</div>
+                            <div class="menu__item__drop__item">Studio_design_landing_page</div>
+                        </a>
+                        <a href="./web/agency_lading_page/agency_lading_page.html">
+                            <div class="menu__item__drop__item">agency_landing_page</div>
                         </a>
                     </div>
                 </div>
