--- a/index.html
+++ b/index.html
@@ -48,59 +48,211 @@
     <section>
         <div class="container">
             <button class="button__1">Button 1</button>
+            <div class="decription">
+                <ul>
+                    <li>padding</li>
+                    <li>background-color</li>
+                    <li>color</li>
+                    <li>border-radius</li>
+                    <li>cursor</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__2">Button 2</button>
+            <div class="decription">
+                <ul>
+                    <li>transform: translateY()</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__3">Button 3</button>
+            <div class="decription">
+                <ul>
+                    <li>background: linear-gradient()</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__4">Button 4</button>
+            <div class="decription">
+                <ul>
+                    <li>border-radius: 999px</li>
+                    <li>box-shadow</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__5">Button 5</button>
+            <div class="decription">
+                <ul>
+                    <li>border-bottom</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__6">Button 6</button>
+            <div class="decription">
+                <ul>
+                    <li>transform: scale()</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__7">Button 7</button>
+            <div class="decription">
+                <ul>
+                    <li>transform: translateY()</li>
+                    <li>box-shadow</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__8">Button 8</button>
+            <div class="decription">
+                <ul>
+                    <li>transition</li>
+                    <li>box-shadow: inset</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__9">Button 9</button>
+            <div class="decription">
+                <ul>
+                    <li>transition</li>
+                    <li>transform: scale()</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__10">Button 10</button>
+            <div class="decription">
+                <ul>
+                    <li>::after</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__11">Button 11</button>
+            <div class="decription">
+                <ul>
+                    <li>::after</li>
+                    <li>position: relative, absolute</li>
+                    <li>content: ""</li>
+                    <li>top, left</li>
+                    <li>z-index</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__12">
                 <span>Button 12</span>
             </button>
+            <ul>
+                <li>border</li>
+                <li>background-color: transparent</li>
+                <li>button</li>
+            </ul>
         </div>
         <div class="container">
             <button class="button__13">Button 13</button>
+            <div class="decription">
+                <ul>
+                    <li>::after</li>
+                    <li>linear-gradient(white,grey)</li>
+                    <li>background-size: 200%</li>
+                    <li>background-position: left</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__14">Button 14</button>
+            <div class="decription">
+                <ul>
+                    <li>::after</li>
+                    <li>position: relative, absolute</li>
+                    <li>top: 50%</li>
+                    <li>left: 50%</li>
+                    <li>transform: translate(-50%, -50%)</li>
+                    <li>width: 0</li>
+                    <li>height: 0</li>
+                    <li>overflow: hidden</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__15">Button 15</button>
+            <div class="decription">
+                <ul>
+                    <li>::after</li>
+                    <li>rotate(-45deg)</li>
+                    <li>translateY(-3em)</li>
+                    <li>transform-origin</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__16">Button 16</button>
+            <div class="decription">
+                <ul>
+                    <li>::after</li>
+                    <li>linear-gradient(white, blue)</li>
+                    <li>height: 200%</li>
+                    <li>transform: translateY(-50%)</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__17">Button 17</button>
+            <div class="decription">
+                <ul>
+                    <li>::after</li>
+                    <li>transform: rotate()</li>
+                    <li>top, left</li>
+                </ul>
+            </div>
         </div>
         <div class="container">
             <button class="button__18">Button 18</button>
+            <div class="decription">
+                <ul>
+                    <li>::after</li>
+                    <li>transform: rotate()</li>
+                    <li>top, left</li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <button class="button__19">Button 19</button>
+            <div class="decription">
+                <ul>
+                    <li>::after: white</li>
+                    <li>::before: yellow</li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <button class="button__20">Button 20</button>
+            <div class="decription">
+                <ul>
+                    <li>background-size: 400%</li>
+                    <li>animation</li>
+                    <li>background-position</li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <button class="button__21"><span>Button 21</span></button>
+            <div class="decription">
+                <ul>
+                    <li>::after</li>
+                    <li>::before</li>
+                    <li>transform</li>
+                    <li>backdrop-filter</li>
+                </ul>
+            </div>
         </div>
     </section>
 
