--- a/web/agency_lading_page/agency_lading_page.html
+++ b/web/agency_lading_page/agency_lading_page.html
@@ -62,7 +62,7 @@
     <section>
         <div class="relative flex mt-100 mb-200 mr-52 ml-52">
             <div class="mr-120 flex flex-col justify-center" style="width: calc(100% - 750px);">
-                <div class="mb-32 z-10">
+                <div class="flex flex-col mb-32 z-10">
                     <h1 style="line-height: 99.8%;"><span class="fw-700">We Help you</span>
                     </h1>
                     <h1 style="line-height: 99.8%;">
