--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         <a href="./web/agency_lading_page/agency_lading_page.html">
                             <div class="menu__item__drop__item">agency_landing_page</div>
                         </a>
+                        <a href="./web/construction_company_landing_page/construction_company_landing_page.html">
+                            <div class="menu__item__drop__item">construction_company_landing_page</div>
+                        </a>
                     </div>
                 </div>
                 <div class="menu__item"><a href="#">Menu</a>
