--- a/web/construction_company_landing_page/construction_company_landing_page.html
+++ b/web/construction_company_landing_page/construction_company_landing_page.html
@@ -50,12 +50,12 @@
                         <p class="mb-20 fs-24 text-center">The National University of Architecture</p>
                     </div>
                     <div class="flex ">
-                        <div class="flex-middle hover px-60 py-12 bg-black w50">
+                        <div class="flex-middle hover px-60 py-12 bg-black w50 hover">
                             <i class="fa-solid fa-arrow-left"></i>
                             <p class="fs-18 px-12">Back</p>
                         </div>
                         <div style="width: 4px;"></div>
-                        <div class="flex-middle hover px-60 py-12 bg-black w50">
+                        <div class="flex-middle hover px-60 py-12 bg-black w50 hover">
                             <p class="fs-18 px-12">Next</p>
                             <i class="fa-solid fa-arrow-right"></i>
                         </div>
@@ -304,8 +304,8 @@
                 <div class="flex flex-col" style="width: 60%;">
                     <div class="grid col-2 gap-32 text-white mb-32">
                         <div class="flex flex-col">
-                            <div style="height: 247px;">
-                                <img src="./img/p1.png" alt="" class="w100">
+                            <div>
+                                <img src="./img/p1.png" alt="" class="w100 h100">
                             </div>
                             <div class="flex flex-col px-12 py-16 bg-secondary">
                                 <p class="fs-20 fw-700 mb-12">Wildstone Infra Hotel</p>
@@ -313,8 +313,8 @@
                             </div>
                         </div>
                         <div class="flex flex-col">
-                            <div style="height: 247px;">
-                                <img src="./img/p2.png" alt="" class="w100">
+                            <div>
+                                <img src="./img/p2.png" alt="" class="w100 h100">
                             </div>
                             <div class="flex flex-col px-12 py-16 bg-secondary">
                                 <p class="fs-20 fw-700 mb-12">Wildstone Infra Hotel</p>
@@ -322,8 +322,8 @@
                             </div>
                         </div>
                         <div class="flex flex-col">
-                            <div style="height: 247px;">
-                                <img src="./img/p3.png" alt="" class="w100">
+                            <div>
+                                <img src="./img/p3.png" alt="" class="w100 h100">
                             </div>
                             <div class="flex flex-col px-12 py-16 bg-secondary">
                                 <p class="fs-20 fw-700 mb-12">Wildstone Infra Hotel</p>
@@ -331,8 +331,8 @@
                             </div>
                         </div>
                         <div class="flex flex-col">
-                            <div style="height: 247px;">
-                                <img src="./img/p4.png" alt="" class="w100">
+                            <div>
+                                <img src="./img/p4.png" alt="" class="w100 h100">
                             </div>
                             <div class="flex flex-col px-12 py-16 bg-secondary">
                                 <p class="fs-20 fw-700 mb-12">Wildstone Infra Hotel</p>
