--- a/web/construction_company_landing_page/construction_company_landing_page.html
+++ b/web/construction_company_landing_page/construction_company_landing_page.html
@@ -70,8 +70,8 @@
             <div class="mb-60">
                 <h2 class="fw-700">Our Reputation</h2>
             </div>
-            <div class="flex">
-                <div class="mr-64 px-20 py-20 border-1 border-gray">
+            <div class="grid col-3" style="gap: 5%; grid-auto-flow: column;">
+                <div class="px-20 py-20 border-1 border-gray">
                     <div class="mb-20">
                         <img src="./img/icon1.png" alt="">
                     </div>
@@ -82,7 +82,7 @@
                         <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
                     </div>
                 </div>
-                <div class="mr-64 px-20 py-20 border-1 border-gray">
+                <div class="px-20 py-20 border-1 border-gray">
                     <div class="mb-20">
                         <img src="./img/icon1.png" alt="">
                     </div>
