--- a/web/construction_company_landing_page/construction_company_landing_page.html
+++ b/web/construction_company_landing_page/construction_company_landing_page.html
@@ -341,7 +341,7 @@
                         </div>
 
                     </div>
-                    <div class="flex">
+                    <div class="flex w100">
                         <div class="flex-middle bg-black text-white px-100 py-20 hover" style="width: 35%;">
                             <i class="fa-solid fa-arrow-left"></i>
                             <p class="fs-18 px-12">Back</p>
