--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                 <ul>
                     <li>::after</li>
                     <li>clippath</li>
+                    <li>transform</li>
                     <li>animation</li>
                     <li>backdrop-filter</li>
                 </ul>
