--- a/web/agency_lading_page/agency_lading_page.html
+++ b/web/agency_lading_page/agency_lading_page.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@400&family=Playfair+Display&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="./men.css">
+    <link rel="stylesheet" href="/men.css">
     <link rel="stylesheet" href="./agency_lading_page.css">
 </head>
 
