--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phụng Training</title>
-    <link rel="stylesheet" href="./button.css">
-    <link rel="stylesheet" href="./menu.css">
+    <link rel="stylesheet" href="./css/button.css">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/men.css">
 </head>
 
 <body>
@@ -289,6 +290,16 @@
                     <li>::before: border-left, right</li>
                     <li>outline</li>
                     <li>transition</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="container">
+            <button class="button__24">Button 24</button>
+            <div class="decription">
+                <ul>
+                    <li>rotateY</li>
+                    <li>text-shadow</li>
                 </ul>
             </div>
         </div>
