--- a/feature/web/agency_lading_page/agency_lading_page.html
+++ b/feature/web/agency_lading_page/agency_lading_page.html
@@ -64,7 +64,7 @@
         </div>
     </header>
     <section>
-        <div class="animation__wraper relative flex flex-col-992 mt-100 mb-200 mr-52 ml-52">
+        <div class="relative flex flex-col-992 mt-100 mb-200 mr-52 ml-52">
             <div class="animate__left animate__animated animate__fadeInLeft mr-120 flex flex-col justify-center w50 w100-992"
                 style="height: 400px;">
                 <div class="flex flex-col mb-32 z-10">
@@ -123,7 +123,7 @@
         </div>
     </section>
 
-    <section class="animation__wraper2">
+    <section>
         <div class="animate__left animate__animated animate__fadeInLeft bg__2 relative flex flex-col mb-200"
             style="height: 578px;">
             <div class="absolute bg__bg bg-primary">
@@ -281,7 +281,7 @@
         </div>
     </section>
 
-    <section class="animation__wraper3">
+    <section>
         <div class="flex flex-col-992 mt-100 mb-200 mr-52 ml-52">
             <div class="animate__left animate__animated animate__fadeInLeft  mr-120 relative flex-middle text-center-992 mx-0-992 w100-992"
                 style="width: 750px;">
@@ -330,7 +330,7 @@
         </div>
     </section>
 
-    <section class="animation__wraper4">
+    <section>
         <div class="animate__right animate__animated animate__fadeInRight relative flex flex-col mb-80"
             style="padding-bottom: 60px;">
             <div class="absolute bg__bg bg-yellow r0" style="transform: scaleX(-1);">
@@ -404,8 +404,8 @@
         </div>
     </section>
 
-    <section class="animation__wraper5">
-        <div class="animate__down animate__animated animate__fadeInDown flex flex-col mt-92 mb-92">
+    <section>
+        <div class="animate__down animate__animated flex flex-col mt-92 mb-92">
             <div class="flex-middle mb-60">
                 <div class="mb-32 flex-middle flex-col" style="width: 600px;">
                     <h2 class=" text-center " style=" line-height: 99.9%;">
@@ -479,8 +479,8 @@
         </div>
     </section>
 
-    <section class="animation__wraper6">
-        <div class="animate__up animate__animated animate__fadeInUp  bg-black flex flex-col-992 justify-between text-white px-60 py-72"
+    <section>
+        <div class="bg-black flex flex-col-992 justify-between text-white px-60 py-72"
             style="border-radius: 0px 158px 0px 0px;">
             <div class="flex flex-col">
                 <h3 class="title mb-24">Dream Agency</h3>
