--- a/feature/web/agency_lading_page/agency_lading_page.html
+++ b/feature/web/agency_lading_page/agency_lading_page.html
@@ -308,7 +308,7 @@
                             <img class="br-8" src="./img/uisoup2.png" width="97px" height="270px">
                         </div>
                         <div class="flex justify-between align-center mt-24">
-                            <p class="fw-600">UI Soup4</p>
+                            <p class="fw-600">UI Soup5</p>
                             <div class="border-1 border-black br-circle flex-middle"
                                 style="width: 92px; height: 23px; font-size: 14px;">
                                 View Work
@@ -321,7 +321,33 @@
                             <img class="br-8" src="./img/uisoup2.png" width="97px" height="270px">
                         </div>
                         <div class="flex justify-between align-center mt-24">
-                            <p class="fw-600">UI Soup4</p>
+                            <p class="fw-600">UI Soup6</p>
+                            <div class="border-1 border-black br-circle flex-middle"
+                                style="width: 92px; height: 23px; font-size: 14px;">
+                                View Work
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide flex flex-col br-12 bg-white px-12 py-24">
+                        <div class="flex">
+                            <img class="br-8 mr-12" src="./img/uisoup1.png" width="298px" height="270px">
+                            <img class="br-8" src="./img/uisoup2.png" width="97px" height="270px">
+                        </div>
+                        <div class="flex justify-between align-center mt-24">
+                            <p class="fw-600">UI Soup7</p>
+                            <div class="border-1 border-black br-circle flex-middle"
+                                style="width: 92px; height: 23px; font-size: 14px;">
+                                View Work
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide flex flex-col br-12 bg-white px-12 py-24">
+                        <div class="flex">
+                            <img class="br-8 mr-12" src="./img/uisoup1.png" width="298px" height="270px">
+                            <img class="br-8" src="./img/uisoup2.png" width="97px" height="270px">
+                        </div>
+                        <div class="flex justify-between align-center mt-24">
+                            <p class="fw-600">UI Soup8</p>
                             <div class="border-1 border-black br-circle flex-middle"
                                 style="width: 92px; height: 23px; font-size: 14px;">
                                 View Work
