--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                         <a href="./feature/menu/menu_2.html">
                             <div class="menu__item__drop__item">Menu 2</div>
                         </a>
+                        <a href="./feature/menu/menu_3.html">
+                            <div class="menu__item__drop__item">Menu 3</div>
+                        </a>
                     </div>
                 </div>
                 <div class="menu__item"><a href="#">JS</a>
@@ -335,6 +338,21 @@
                 <ul>
                     <li>animation</li>
                     <li>box-shadow</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="container">
+            <button class="button__27">Button 27
+                <span class="bg__27M"></span>
+                <span class="bg__27L"></span>
+                <span class="bg__27R"></span>
+                <span class="bg__27"></span>
+            </button>
+            <div class="decription">
+                <ul>
+                    <li>div left, middle, right, bg</li>
+                    <li>clippath</li>
                 </ul>
             </div>
         </div>
