--- a/feature/web/decox_design/decox_design.html
+++ b/feature/web/decox_design/decox_design.html
@@ -540,17 +540,19 @@
                     </div>
                     <div class="flex text-right text-secondary">See more at Youtube</div>
                 </div>
-                <div class="flex flex-col">
+                <div class="flex flex-col overflow-hidden">
                     <div class="channel__video br-16 overflow-hidden mb-20">
                         <iframe id="video__play" src="https://www.youtube.com/embed/tlDF3cfb8lA" width="100%"
                             height="100%" frameborder="0"></iframe>
                     </div>
-                    <div class="channel__play swiper my__swiper3">
-                        <div id="video" class="swiper-wrapper">
+                    <div class="overflow-hidden">
+                        <div class="swiper my__swiper3">
+                            <div id="video" class="swiper-wrapper">
 
+                            </div>
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-next"></div>
                         </div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
                     </div>
                 </div>
             </div>
@@ -559,7 +561,7 @@
                     <div class="upcase text-primary fs-24 fw-700 flex justify-end text-right font-2">nội thất mới</div>
                     <div class="flex text-right text-secondary">New Interior Design</div>
                 </div>
-                <div class="flex overflow-hidden">
+                <div class="overflow-hidden">
                     <div class="swiper my__swiper4">
                         <div class="ntm1 swiper-wrapper">
 
