--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                         <a href="./feature/web/decox_design/decox_design.html">
                             <div class="menu__item__drop__item">Decox_design</div>
                         </a>
+                        <a href="./feature/web/temp/temp.html">
+                            <div class="menu__item__drop__item">Temp</div>
+                        </a>
                     </div>
                 </div>
                 <div class="menu__item"><a href="#">Menu</a>
