--- a/feature/web/decox_design/mau_nha_dep.html
+++ b/feature/web/decox_design/mau_nha_dep.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Decox Design</title>
+    <title>299+ Mẫu thiết Kế Nhà Đẹp</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <header>
         <div class="header flex justify-center">
             <div class="flex px-12 py-4">
@@ -403,50 +404,41 @@
                 <div class="header__nav flex-middle">
                     <nav>
                         <ul>
-                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
-                                    style="width: 76px;">
+                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
                                     <span><img src="./img/mau-nha-dep.svg" alt="mẫu nhà đẹp" width="36px"
                                             height="36px"></span>
                                     <span class="upcase fs-10 fw-600">mẫu nhà đẹp</span>
                                 </a></li>
-                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
-                                    style="width: 76px;">
+                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
                                     <span><img src="./img/phong-khach.svg" alt="phòng khách" width="36px"
                                             height="36px"></span>
                                     <span class="upcase fs-10 fw-600">phòng khách</span>
                                 </a></li>
-                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
-                                    style="width: 76px;">
+                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
                                     <span><img src="./img/phong-bep.svg" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">phòng bếp</span>
                                 </a></li>
-                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
-                                    style="width: 76px;">
+                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
                                     <span><img src="./img/phong-ngu.svg" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">phòng ngủ</span>
                                 </a></li>
-                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
-                                    style="width: 76px;">
+                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
                                     <span><img src="./img/tre-em.svg" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">trẻ em</span>
                                 </a></li>
-                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
-                                    style="width: 76px;">
+                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
                                     <span><img src="./img/giat-phoi.svg" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">giặt phơi</span>
                                 </a></li>
-                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
-                                    style="width: 76px;">
+                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
                                     <span><img src="./img/rest-room.svg" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">rest room</span>
                                 </a></li>
-                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
-                                    style="width: 76px;">
+                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
                                     <span><img src="./img/phong-lam-viec.png" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">làm việc</span>
                                 </a></li>
-                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
-                                    style="width: 76px;">
+                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
                                     <span><img src="./img/phong-giai-tri.png" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">giải trí</span>
                                 </a></li>
@@ -457,266 +449,11 @@
     </header>
 
     <section>
-        <div class="slider swiper my__swiper1 mb-40">
-            <div id="slide" class="swiper-wrapper">
-
-            </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-    </section>
-
-    <section>
-        <div class="grid col-3 col-2-1200 gap-20 px-120 mb-40">
-            <div class="flex bs-5 br-4 overflow-hidden rf-col-2-1200 hover relative">
-                <img src=" ./img/sec21.svg">
-            </div>
-            <div class="flex flex-col bs-5 br-4 overflow-hidden">
-                <div><img src="./img/sec22.jpg" width="100%" height="100%"></div>
-                <div class="flex flex-col justify-between h100">
-                    <div class="fs-24 fw-700 text-center mb-12 px-12">1 giờ trò chuyện cùng chuyên gia</div>
-                    <div class="flex flex-col">
-                        <div class="px-12 lh-24 mb-12 text-ov-3 text-justify">Bạn sắp về nhà mới và cần được
-                            tư vấn? Chia
-                            sẻ
-                            những
-                            tâm tư
-                            và ý tưởng tuyệt vời cho ngôi nhà tương lai, Decox luôn lắng nghe bạn.</div>
-                        <div class="flex-middle ">
-                            <a href="">
-                                <div class="upcase btn__decox fw-700 mb-12">đăng ký tư vấn</div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="flex flex-col bs-5 br-4 overflow-hidden ">
-                <div><img src="./img/sec22.jpg" width="100%" height="100%"></div>
-                <div class="flex flex-col justify-between h100">
-                    <div class="fs-24 fw-700 text-center mb-12 px-12">Bạn cần thi công theo bản vẽ?</div>
-                    <div class="flex flex-col">
-                        <div class="px-12 lh-24 mb-12 text-ov-3 text-justify">Bạn sắp về nhà mới và đã có bản
-                            vẽ thiết kế
-                            nội thất,
-                            bạn
-                            đang cần tìm một nhà thầu uy tín để thi công?</div>
-                        <div class="flex-middle">
-                            <a href="#">
-                                <div class="upcase btn__decox fw-700 mb-12">nhận báo giá</div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="sec__3 grid gap-20 px-60 mb-40">
-            <a href="#" class="sec__3__item__1 br-16 overflow-hidden hover relative">
-                <img src="./img/b1.jpg" width="100%" height="100%">
-            </a>
-            <a href="#" class="br-16 overflow-hidden hover relative">
-                <img src="./img/b2.jpg" width="100%" height="100%">
-            </a>
-            <a href="#" class="br-16 overflow-hidden hover relative">
-                <img src="./img/b3.jpg" width="100%" height="100%">
-            </a>
-        </div>
-    </section>
-
-    <section>
-        <div class="flex-middle flex-col px-60 mb-40">
-            <div class="flex-middle flex-col mb-20">
-                <div class="upcase text-primary fs-24 font-2">decox signature</div>
-                <div class="text-secondary">Collection</div>
-            </div>
-            <div class="flex w100">
-                <div class="colection swiper my__swiper2">
-                    <div id="collection" class="swiper-wrapper">
-
-                    </div>
-                </div>
-            </div>
-            <div class="flex-middle mt-20">
-                <div class="colection__pagination">
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="flex flex-col px-60 mb-60">
-            <div class="channel grid mb-80">
-                <div class="flex justify-center align-end flex-col mb-20 mr-40">
-                    <div class="upcase text-primary fs-24 fw-700 flex justify-end text-right font-2">DECOX CHANNEL
-                    </div>
-                    <div class="flex text-right text-secondary">See more at Youtube</div>
-                </div>
-                <div class="flex flex-col overflow-hidden">
-                    <div class="channel__video br-16 overflow-hidden mb-20">
-                        <iframe id="video__play" src="https://www.youtube.com/embed/tlDF3cfb8lA" width="100%"
-                            height="100%" frameborder="0"></iframe>
-                    </div>
-                    <div class="overflow-hidden">
-                        <div class="swiper my__swiper3">
-                            <div id="video" class="swiper-wrapper">
-
-                            </div>
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="channel grid mb-40 overflow-hidden">
-                <div class="flex justify-center align-end flex-col mb-20 mr-40">
-                    <div class="upcase text-primary fs-24 fw-700 flex justify-end text-right font-2">nội thất mới</div>
-                    <div class="flex text-right text-secondary">New Interior Design</div>
-                </div>
-                <div class="overflow-hidden">
-                    <div class="swiper my__swiper4">
-                        <div class="ntm1 swiper-wrapper">
-
-                        </div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="channel grid mb-40">
-                <div class="flex justify-center align-end flex-col mb-20 mr-40">
-                    <div class="upcase text-primary fs-24 fw-700 flex justify-end text-right font-2">kiến trúc mới</div>
-                    <div class="flex text-right text-secondary">New Architecture</div>
-                </div>
-                <div class="flex overflow-hidden">
-                    <div class="swiper my__swiper4">
-                        <div class="ntm2 swiper-wrapper">
-
-                        </div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="channel grid mb-40">
-                <div class="flex justify-center align-end flex-col mb-20 mr-40">
-                    <div class="upcase text-primary fs-24 fw-700 flex justify-end text-right font-2">thi công mới</div>
-                    <div class="flex text-right text-secondary">New Constuction</div>
-                </div>
-                <div class="flex overflow-hidden">
-                    <div class="swiper my__swiper4">
-                        <div class="ntm3 swiper-wrapper">
-
-                        </div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <section>
-        <div class="flex flex-col px-60 mb-40">
-            <div class="flex-middle mb-40">
-                <span class="bg-primary" style="width: 300px; height: 2.5px;"></span>
-                <span class="upcase fs-24 fw-700 font-2 px-40 text-center">cảm hứng thiết kế</span>
-                <span class="bg-primary" style="width: 300px; height: 2.5px;"></span>
-            </div>
-            <div id="chtk" class="grid col-4 gap-20">
-
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="flex flex-col px-60 mb-40">
-            <div class="flex-middle mb-40">
-                <span class="bg-primary" style="width: 300px; height: 2.5px;"></span>
-                <span class="upcase fs-24 fw-700 font-2 px-40">góc nhìn</span>
-                <span class="bg-primary" style="width: 300px; height: 2.5px;"></span>
-            </div>
-            <div class="grid w100 gap-12" style="grid-template-columns: repeat(6, 1fr);  list-style-position: outside;">
-                <div class="flex text-wrap text-justify">
-                    <span class="fs-40 list-dot text-gray">.</span>
-                    <a href="#">Thông tầng - Điểm nhấn cho không gian sống hoàn mỹ</a>
-                </div>
-                <div class="flex text-wrap text-justify">
-                    <span class="fs-40 list-dot text-gray">.</span>
-                    <a href="#">Tại sao nên chọn đơn vị thiết kế và thi công?</a>
-                </div>
-                <div class="flex text-wrap text-justify">
-                    <span class="fs-40 list-dot text-gray">.</span>
-                    <a href="#">3 Cách tối ưu hóa chi phí khi làm nhà</a>
-                </div>
-                <div class="flex text-wrap text-justify">
-                    <span class="fs-40 list-dot text-gray">.</span>
-                    <a href="#">Chọn một thiết kế có lợi hay chọn một thiết kế có ý
-                        nghĩa?</a>
-                </div>
-                <div class="flex text-wrap text-justify">
-                    <span class="fs-40 list-dot text-gray">.</span>
-                    <a href="#">7 ngày ở Úc</a>
-                </div>
-                <div class="flex text-wrap text-justify">
-                    <span class="fs-40 list-dot text-gray">.</span>
-                    <a href="#">Như thế nào là một khách hàng tử tế?</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <hr class="hr-dash mb-40 ml-60 mr-60">
-
-    <section>
-        <div class="grid col-3 col-2-1200 gap-20 px-120 mb-40">
-            <div class="flex bs-5 br-4 overflow-hidden rf-col-2-1200 hover relative">
-                <img src=" ./img/sec21.svg">
-            </div>
-            <div class="flex flex-col bs-5 br-4 overflow-hidden">
-                <div><img src="./img/sec22.jpg" width="100%" height="100%"></div>
-                <div class="flex flex-col justify-between h100">
-                    <div class="fs-24 fw-700 text-center mb-12 px-12">Về Decox</div>
-                    <div class="flex flex-col">
-                        <div class="px-12 lh-24 text-ov-3 mb-12 text-justify">10 năm kinh nghiệm trong lĩnh vực thiết kế
-                            kiến trúc
-                            nội
-                            thất tại
-                            Việt Nam,
-                            Decox mang đến những giá trị sống mới, chuẩn
-                            mực mới, hãy để chúng tôi mang đến giá trị tinh thần và sự bền vững cho cuộc sống của bạn.
-                            Tìm
-                            hiểu về Decox tại đây</div>
-                        <div class="flex-middle ">
-                            <a href="#">
-                                <div class="upcase btn__decox fw-700 mb-12">đăng ký tư vấn</div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="flex flex-col bs-5 br-4 overflow-hidden ">
-                <div><img src="./img/sec22.jpg" width="100%" height="100%"></div>
-                <div class="flex flex-col justify-between h100">
-                    <div class="fs-24 fw-700 text-center mb-12 px-12">Bạn cần thi công theo bản vẽ?</div>
-                    <div class="flex flex-col">
-                        <div class="px-12 lh-24 text-ov-3 mb-12 text-justify">Bạn sắp về nhà mới và đã có bản
-                            vẽ thiết kế
-                            nội
-                            thất, bạn
-                            đang cần tìm một nhà thầu uy tín để thi công?</div>
-                        <div class="flex-middle ">
-                            <a href="#">
-                                <div class="upcase btn__decox fw-700 mb-12">nhận báo giá</div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="masonry px-60 py-60">
+            <div class="masonry-col masonry-col-1"></div>
+            <div class="masonry-col masonry-col-2"></div>
+            <div class="masonry-col masonry-col-3"></div>
+            <div class="masonry-col masonry-col-4"></div>
         </div>
     </section>
 
@@ -797,10 +534,14 @@
 
     </footer>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+        integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/wookmark/wookmark.min.js"></script>
     <script src="./img_source.js"></script>
-    <script src="./decox_design.js"></script>
+    <script src="./mau_nha_dep.js"></script>
 </body>
 
 </html>
